--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 [deps]
 Conda = "8f4d0f93-b110-5947-807f-2305c1781a2d"
 LazyArtifacts = "4af54fe1-eca0-43a8-85a7-787d91b784e3"
-MPIReco = "e4246700-6248-511e-8146-a1d1f47669d2"
+MPIFiles = "371237a9-e6c1-5201-9adb-3d8cfa78fa9f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Scratch = "6c6a2e73-6563-6170-7368-637461726353"
